# lidar_slam_course

ch1/c++compile/cmake/: CMakeLists.txt
ch1/c++compile/g++/: a.out
ch1/c++compile/ros/devel/: .catkin
ch1/c++compile/ros/devel/lib/hello/: useHello
ch1/c++compile/ros/devel/lib/pkgconfig/: hello.pc
ch1/c++compile/ros/devel/share/hello/cmake/: helloConfig.cmake
ch1/c++compile/ros/src/helloslam/: CMakeLists.txt  package.xml
ch2/: 3Dharris.cpp  3Dsift.cpp  kd-tree.py  oc-tree.py  pca.py  voxdownsampling.py
ch3/eigen/useGeometry/: CMakeLists.txt
ch3/eigen/visualizeGeometry/: CMakeLists.txt
ch3/sophus/example/: CMakeLists.txt  trajectoryError.cpp
